--- a/website/templates/add_expense.html
+++ b/website/templates/add_expense.html
@@ -110,32 +110,43 @@
             .sidebar-menu .active {
                 color: black;
             }
-            
-            .flash-message {
-                position: sticky;
+            .flash-messages {
+                position: fixed;
+                bottom: 20px;
+                left: 50%;
+                transform: translateX(-50%);
+                list-style-type: none;
+                padding: 0;
                 display: flex;
                 flex-direction: column;
-                
-                margin-bottom: 10px;
-                margin-left: auto;
-                margin-right: auto;
-                border-radius: 4px;
+                align-items: center;
                 z-index: 10000000;
-                max-width: 20%;
-                
-                background-color: transparent !important;
-                overflow: hidden;
+                width:90vw;
+                padding-top: 10px;
+                padding-bottom: 10px;
             }
+            
+            .flash-message {
+                margin: 5px 0;
+                padding: 10px;
+                border-radius: 5px;
+                color: #fff;
+                width: 250px;
+                text-align: center;
+            }
+            
 
             .flash-success {
             background-color: #8bc34a !important;
             color: #fff !important;
+            align-content: center;
 
             }
 
             .flash-error {
             background-color: #f44336 !important;
             color: #fff !important;
+            align-content: center;
             }
 
         </style>
@@ -165,20 +176,20 @@
     </head>
     <body
         class="with-custom-webkit-scrollbars with-custom-css-scrollbars" data-dm-shortcut-enabled="true" data-sidebar-shortcut-enabled="true" data-set-preferred-mode-onload="true">
-        <!-- flash message logic
+        <!-- flash message logic-->
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 <ul class="flash-messages">
                     {% for category, message in messages %}
                         {% if category == 'error' %}
-                            <li class=" flash-message flash-error">{{ message }}</li>
+                            <li class=" flash-message flash-error ">{{ message }}</li>
                         {% elif category == 'success' %}
-                            <li class="flash-message flash-success">{{ message }}</li>
+                            <li class="flash-message flash-success ">{{ message }}</li>
                         {% endif %}
                     {% endfor %}
                 </ul>
             {% endif %}
-        {% endwith %} -->
+        {% endwith %}
         <!-- loader -->
         <img src="{{ url_for('static', filename='logo/logo_login.jpg') }}" id="loader" class="center" alt="loader" srcset="">
 
@@ -188,7 +199,7 @@
             <div
             class="page-wrapper with-navbar with-sidebar" data-sidebar-type="full-height overlayed-sm-and-down"> 
             <!-- Sticky alerts (toasts), empty container -->
-            <div class="sticky-alerts"></div>
+            <!-- <div class="sticky-alerts"></div> -->
 
             <!-- Navbar start -->
             <nav class="navbar justify-content-between">
