--- a/website/templates/analytics.html
+++ b/website/templates/analytics.html
@@ -218,9 +218,10 @@
                 <div class="d-flex justify-content-center flex-column mt-20" id="cards-containter">
                     <!-- analytics-selector -->
                     <div class="card shadow rounded" id="select-card">
-                        <h2 class="card-title">Select Analytics Timeframe</h2>
+                        <h2 class="card-title">Select Analytics Timeframe (Now Showing :{{credit_dates|list|count}} days)</h2>
                         <form action="{{ url_for('views.analytics') }}" method="POST" class="form-inline p-10">
                             <select name="day_range" id="day_range" class="day_range form-control">
+                                <option value =""disabled selected hidden>Select Range</option>
                                 <option value="7">7 days</option>
                                 <option value="30">30 days</option>
                                 <option value="90">90 days</option>
@@ -377,26 +378,6 @@
                     }
                 });
 
-                var dayRangeSelect = document.getElementById("day_range");
-                var selectedDaysElement = document.getElementById("selected_days");
-
-
-                var selectedDays = localStorage.getItem("selectedDays");
-
-
-                if (selectedDays) {
-                    dayRangeSelect.value = selectedDays;
-                }
-
-                dayRangeSelect.addEventListener("change", function () {
-                    var selectedDays = dayRangeSelect.value;
-                    selectedDaysElement.textContent = selectedDays;
-                    localStorage.setItem("selectedDays", selectedDays);
-                    Days();
-                });
-
-                selectedDaysElement.textContent = dayRangeSelect.value;
-                Days();
             });
         </script>
 
