--- a/website/templates/transaction.html
+++ b/website/templates/transaction.html
@@ -110,10 +110,60 @@
             .sidebar-menu .active {
                 color: black;
             }
+
+            .flash-messages {
+                position: fixed;
+                bottom: 20px;
+                left: 50%;
+                transform: translateX(-50%);
+                list-style-type: none;
+                padding: 0;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                z-index: 10000000;
+                width:90vw;
+                padding-top: 10px;
+                padding-bottom: 10px;
+            }
+            
+            .flash-message {
+                margin: 5px 0;
+                padding: 10px;
+                border-radius: 5px;
+                color: #fff;
+                width: 250px;
+                text-align: center;
+            }
+
+            .flash-success {
+                background-color: #8bc34a !important;
+                color: #fff !important;
+
+            }
+
+            .flash-error {
+                background-color: #f44336 !important;
+                color: #fff !important;
+            }
         </style>
     </head>
     <body
         class="with-custom-webkit-scrollbars with-custom-css-scrollbars" data-dm-shortcut-enabled="true" data-sidebar-shortcut-enabled="true" data-set-preferred-mode-onload="true">
+        <!-- flash message logic-->
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                <ul class="flash-messages">
+                    {% for category, message in messages %}
+                        {% if category == 'error' %}
+                            <li class=" flash-message flash-error ">{{ message }}</li>
+                        {% elif category == 'success' %}
+                            <li class="flash-message flash-success ">{{ message }}</li>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
         <!-- loader -->
         <img
         src="{{ url_for('static', filename='logo/logo_login.jpg') }}" id="loader" class="center" alt="loader" srcset="">
