--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -281,6 +281,8 @@
                             Current Goal (₹):
                                 {% if current_user.goal == 1.0 %}
                                     <p class="text-danger">Please set goal </p>
+                                {% elif (current_user.goal-total_balance)<=0 %}
+                                    <p class="text-success">Goal reached, Please update!</p>
                                 {% else %}
                                     <span class="text-secondary">{{current_user.goal}}</span>
                                     <p class="text-muted font-size-12 mt-5">Progress: {{ (total_balance / current_user.goal) * 100 }}%</p>
